--- a/Templates/master.html
+++ b/Templates/master.html
@@ -1,23 +1,40 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'core/css/master.css' %}">
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Sitio</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'core/css/master.css' %}">
+</head>
+<body>
+    
+
 <!-- HEADER -->
 <header class="header">
     <div class="logo">MI SITIO</div>
 
     <nav class="nav">
-            <a href="#" class="btn-header">Inicio</a>
-            <a href="#"class="btn-header">Nosotros</a>
-            <a href="#"class ="btn-header">Servicios</a>
-            <a href="#"class ="btn-header">Productos</a>
-            <a href="#"class ="btn-header">Contactenos</a>
-        </div>
+        <a href="#" class="btn-header">Inicio</a>
+        <a href="#" class="btn-header">Nosotros</a>
+        <a href="#" class="btn-header">Servicios</a>
+        <a href="#" class="btn-header">Productos</a>
+        <a href="#" class="btn-header">Contactenos</a>
     </nav>
 
     <div class="header-actions">
-        <a href="{% url 'usuarios:login' %}" class="login">Iniciar sesión</a>
-        <a href="" class="btn-header">Empezar</a>
+        <a href="{% url 'usuarios:login' %}" class="btn-login">Iniciar sesión</a>
+        <a href="#" class="btn-header">Empezar</a>
     </div>
 </header>
+
+<!-- CONTENIDO DE PRUEBA -->
+<main class="main-content">
+    <div style="height:2000px"></div>
+</main>
 
 <!-- FOOTER -->
 <footer class="footer">
@@ -30,3 +47,9 @@
         </div>
     </div>
 </footer>
+
+<!-- JS -->
+<script src="{% static 'core/js/main.js' %}"></script>
+
+</body>
+</html>
