se cre la aplicacion productos con urls tempalte html y todo lo correspondiente a la app

--- a/Templates/master.html
+++ b/Templates/master.html
@@ -27,8 +27,8 @@
         <a href="{% url 'core:index' %}" class="btn-header">Inicio</a>
         <a href="#" class="btn-header">Nosotros</a>
         <a href="#" class="btn-header">Servicios</a>
-        <a href="#" class="btn-header">Productos</a>
-        <a href="#" class="btn-header">Contactenos</a>
+        <a href="{% url 'productos:lista_productos' %}" class="btn-header">Productos</a>
+        <a href="" class="btn-header">Contactenos</a>
     </nav>
 
     <div class="header-actions">
