--- a/core/Templates/core/panel_admin_base.html
+++ b/core/Templates/core/panel_admin_base.html
@@ -3,6 +3,7 @@
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <link rel="stylesheet" href="{% static 'core/css/panel_admin_base.css' %}">
 </head>
 <body class="dashboard-body">
     
